Complete file setup

--- a/api/.env.example
+++ b/api/.env.example
@@ -1,47 +1,74 @@
-# Server Configuration
+# Environment
 NODE_ENV=development
 PORT=3001
 
-# Database Configuration
-DATABASE_URL=postgresql://user:password@localhost:5432/personalpod
-DB_HOST=localhost
-DB_PORT=5432
-DB_NAME=personalpod
-DB_USER=postgres
-DB_PASSWORD=
-DB_MAX_CONNECTIONS=20
-DB_IDLE_TIMEOUT=30000
-DB_CONNECTION_TIMEOUT=2000
+# Database
+DATABASE_URL=postgresql://postgres:password@localhost:5432/personalpod
+DATABASE_SSL=false
+DATABASE_POOL_MIN=2
+DATABASE_POOL_MAX=10
 
-# JWT Configuration
-JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+# Auth
+JWT_SECRET=your-super-secret-jwt-key-min-32-characters
 JWT_EXPIRES_IN=7d
-JWT_REFRESH_EXPIRES_IN=30d
+REFRESH_TOKEN_EXPIRES_IN=30d
+BCRYPT_ROUNDS=10
 
-# AWS Configuration (Optional for local dev)
+# AWS (for local development use LocalStack)
 AWS_REGION=us-east-1
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
+AWS_ACCESS_KEY_ID=test
+AWS_SECRET_ACCESS_KEY=test
+AWS_ENDPOINT_URL=http://localhost:4566  # LocalStack endpoint
 
-# AWS Cognito (Optional)
-AWS_COGNITO_USER_POOL_ID=
-AWS_COGNITO_CLIENT_ID=
-AWS_COGNITO_CLIENT_SECRET=
+# S3
+S3_BUCKET_NAME=personalpod-attachments-dev
+S3_REGION=us-east-1
+S3_MAX_FILE_SIZE=10485760  # 10MB
 
-# Email Configuration
+# Redis
+REDIS_URL=redis://localhost:6379
+REDIS_TTL=3600  # 1 hour
+
+# Email (SES)
 EMAIL_FROM=noreply@personalpod.com
-EMAIL_VERIFICATION_REQUIRED=true
-BLOCK_UNVERIFIED_LOGIN=false  # Set to true in production
-EMAIL_VERIFICATION_EXPIRY=86400  # 24 hours in seconds
-PASSWORD_RESET_EXPIRY=3600  # 1 hour in seconds
+EMAIL_REPLY_TO=support@personalpod.com
+EMAIL_TEST_MODE=true  # Set to false in production
 
-# Frontend Configuration
-FRONTEND_URL=http://localhost:3000
-CORS_ORIGIN=http://localhost:3000
+# MFA
+MFA_APP_NAME=PersonalPod
+MFA_WINDOW=1  # Time window for TOTP validation
+
+# Encryption
+ENCRYPTION_KEY=your-32-character-encryption-key!!  # Must be exactly 32 characters
 
 # Rate Limiting
-RATE_LIMIT_WINDOW_MS=900000  # 15 minutes
-RATE_LIMIT_MAX_REQUESTS=100
+RATE_LIMIT_WINDOW=900000  # 15 minutes in ms
+RATE_LIMIT_MAX=100
 
 # Logging
-LOG_LEVEL=info
+LOG_LEVEL=debug  # debug, info, warn, error
+LOG_FORMAT=json  # json, pretty
+
+# Sentry (optional)
+SENTRY_DSN=
+SENTRY_ENVIRONMENT=development
+
+# OpenAI (optional - for AI features)
+OPENAI_API_KEY=
+OPENAI_MODEL=gpt-4-turbo-preview
+
+# Search
+ELASTICSEARCH_URL=http://localhost:9200
+ELASTICSEARCH_INDEX=personalpod
+
+# File Upload
+MAX_FILE_SIZE=10485760  # 10MB
+ALLOWED_FILE_TYPES=image/jpeg,image/png,image/gif,application/pdf,audio/mpeg,audio/wav
+
+# CORS
+CORS_ORIGIN=http://localhost:5173,http://localhost:3000
+CORS_CREDENTIALS=true
+
+# API Keys (for external services)
+WEBHOOK_SECRET=your-webhook-secret
+API_KEY_SALT=your-api-key-salt
